# 2023-mexico-organizing-documenting-distributing

./: README.md  example_usage_outside_package.py  presentation.odp  pyproject.toml
brewing/: brew_potions.py  example_usage_within_package.py
brewing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
exercises/: Exercise 1 Importing.md  Exercise 2 Editable Installation.md  Exercise 5 Documentation.md
scripts_and_notebooks/: example_usage_different_folder.py
