[project]
name = "brewing"
version = "0.1.0"
description = "a python package for brewing potions"
authors = [{ name = "H. Granger", email = "h.granger@hogwarts.ac.uk" }]
license = { file = "LICENSE" }
requires-python = ">=3.7"
dependencies = ["numpy >= 1.14.0", "matplotlib >= 3.0.0", "pytest >= 3.0.0"]

[tool.setuptools]
packages = ["brewing"]

[project.urls]
"Homepage" = "https://github.com/aspp-latam/2023-mexico-organizing-documenting-distributing"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
